2005-09-06  Carl Worth  <cworth@cworth.org>

	* src/.cvsignore: Ignore cairo.def.
	
	* src/cairo-gstate.c: Remove cairo_private since we only use it in
	.h files, not .c files.

2005-09-02  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Make a very preliminary attempt at 1.0.2, 1.2.0, and
	1.4.0 roadmaps.

2005-09-02  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo-version.sgml: Add description of cairo's
	versioning scheme.

2005-09-02  Carl Worth  <cworth@cworth.org>

	* src/cairo-cache-private.h:
	* src/cairo-cache.c: (_cairo_cache_fini): Clean up some
	documentation issues pointed out by otaylor.

2005-09-01  Keith Packard  <keithp@keithp.com>

	reviewed by: otaylor deserves credit for noticing a problem

	* src/cairo-ft-font.c: (_cairo_ft_scaled_font_create):
	Oops. Call _cairo_scaled_font_set_metrics to set user-space
	metrics for scaled fonts.

2005-09-01  Bertram Felgenhauer  <int-e@gmx.de>

	* src/cairo-scaled-font.c (_cairo_scaled_font_text_to_glyphs):
	Add missing pair of braces. This fixes a crash on text output.

2005-09-01  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.h: Add includes to get sized-integer types such
	as uint32_t.
	
	* test/filter-nearest-offset.c: (draw):
	* test/mask-ctm.c: (draw):
	* test/mask-surface-ctm.c: (draw):
	* test/move-to-show-surface.c: (draw):
	* test/paint-with-alpha.c: (draw):
	* test/scale-source-surface-paint.c: (draw):
	* test/set-source.c: (draw):
	* test/source-surface-scale-paint.c: (draw):
	* test/translate-show-surface.c: (draw): Fix declaration of image
	data array to be uint32_t rather than unsigned long. Fixes four
	out of the remaining five failures in bug #4245.

2005-08-31  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (create_xlib_surface): Add call to
	XSynchronize, (the expected clip-all failure isn't occuring
	without it for some reason).
	
	* test/clip-all.c: (main): Note reason for expected failure.

2005-08-31  Owen Taylor  <otaylor@redhat.com>
